# ORM_SQLAlchemy_and_use_alembic

./: README.md  config.ini  db_connection.py  models_tables.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: d7cdb528740b_init.py
