[tool.poetry]
name = "python-web-home-work-7"
version = "0.1.0"
description = ""
authors = ["Alexey-Goryachev <goryachev.alex00@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_home_work_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
